--- a/index.html
+++ b/index.html
@@ -6,5 +6,33 @@
     <tile>The Simple Web</tile>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
+
+  <body>
+    <header>
+      <div class="container">
+        <div class="header"
+          <div class="logo">
+            <h2>Simple Templace</h2>
+            <h4>The templace make for study</h4>
+          </div>
+        </div>
+        <div class="btn-moible">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">HOME</a></li>            
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
